# vietnam-law-chatbot

./: .env.docker  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
app/: requirements.txt
app/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
app/backend/api/: __init__.py  routes.py
app/backend/api/v1/endpoints/: chat.py  health.py
app/backend/core/: __init__.py  config.py  logging.py  prompts.py  utils.py
app/backend/dataset/: test.txt
app/backend/db/: __init__.py  neo4j.py  qdrant.py
app/backend/domain/: models.py
app/backend/models/: __init__.py  schemas.py
app/backend/retrieval/: utils.py
app/backend/retrieval/document_stores/: factory.py  qdrant.py  qdrant_hybrid.py
app/backend/retrieval/embedders/: factory.py  fastembed_sparse.py  openai.py  sentence_transformers.py
app/backend/retrieval/generation/: factory.py  openai_generator.py
app/backend/retrieval/indexing/: chunking.py  crawler.py
app/backend/retrieval/retrievers/: factory.py  qdrant.py  qdrant_hybrid.py
app/backend/services/: __init__.py  chat.py  chat_service.py  document.py  neo4j_service.py  qdrant_service.py  synthesis_service.py
app/backend/test/: indexing.py  pipeline.py  retrieval_utils.py  test.py
app/backend/tools/: chunking.py  test_indexing.py
app/frontend/: .env.example  README.md  base-ui.html  build.sh  example-response.json  index.html  package-lock.json  package.json
backend/vietnam_law_chatbot/: README.md  main.py
(+33 files in other folders)
